Added UrlUtils class, to fetch files from a url for instance